--- a/src/@styles/utils/index.scss
+++ b/src/@styles/utils/index.scss
@@ -1,2 +1,3 @@
-@import './variables.colors';
-@import './mixins.mediaqueries';
+@import "./variables";
+@import "./variables.colors";
+@import "./mixins.mediaqueries";
