landing layout & paths initiated

--- a/src/@styles/index.scss
+++ b/src/@styles/index.scss
@@ -2,7 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-@import "./utils/index.scss";
+@import './utils/index.scss';
+@import './core/index.scss';
 
 // Scrollbar Customize
 ::-webkit-scrollbar {
