--- a/src/@styles/utils/_variables.colors.scss
+++ b/src/@styles/utils/_variables.colors.scss
@@ -3,6 +3,7 @@
   --color-black: #111;
   --color-secondary-black: #101010;
   --color-primary: #ac941f;
+  --color-primary-alter: #1b4242;
   --color-secondary: #5e5217;
 
   // Gray Shades
